# carton-mcp

./: CHANGELOG.md  README-KILL-CRITERION.md  README.md  __init__.py  add_concept_tool.py  aut_deducer.py  aut_kill_criterion_ledger.tsv  carton_kv.py  carton_quota.py  carton_split_content.py  carton_utils.py  chroma_client.py  chroma_daemon.py  exhaust_records.py  framework_models.py  manifold.py  network_gateway.py  observation_worker_daemon.py  ontology_graphs.py  pyproject.toml  repair_hollow_rule_content.py  retype_buckets.py  server_fastmcp.py  sm_gate.py  soma_fillers.py  substrate_projector.py  swarm_fill.py  test_carton_kv.py  test_carton_kv_schema.py  test_carton_properties.py  test_carton_quota.py  test_concept_provenance_optional_fields.py  test_d2_coverage.py  test_description_rollup.py  test_edit_carton_obj.py  test_linker_fence_opacity.py  test_network_gateway.py  test_publish_manifest_render.py  test_sm_branching.py  test_split_content.py  (+5 more)
.claude/: CLAUDE.md
.claude/rules/: carton-mcp-transport.md  carton-quota.md  daemon-needs-env-vars.md  editing-add-concept-optional-fields-uses-the-dev-flow.md  editing-carton-kv-uses-the-dev-flow.md  editing-split-content-uses-the-dev-flow.md  editing-webbing-agent-uses-the-dev-flow.md  network-gateway.md  starsystem.md
carton_viz/: server.py  viz.html
context/: ai-workflow-rules.md  architecture.md  code-standards.md  project-overview.md  ui-context.md
context/journal/: 2026-06.md  2026-07.md
docs/mirror/: __init__.py.md  add_concept_tool.py.md  backfill_wiki_files.py.md  carton_kv.py.md  carton_utils.py.md  concept_config.py.md  exhaust_records.py.md  migrate_inverse_relationships.py.md  observation_worker_daemon.py.md  ontology_graphs.py.md  server_fastmcp.py.md  sm_gate.py.md  smart_chroma_rag.py.md  substrate_projector.py.md  test_carton_kv.py.md  test_carton_kv_schema.py.md  test_edit_carton_obj.py.md  test_linker_fence_opacity.py.md  test_relationship_constraints.py.md  wiki_config.py.md
scripts/: backfill_timeline_is_a.py  run_aut_kill_criterion.py
tests/: test_aut_deducer.py  test_composed_consumer.py  test_contradiction_reject.py  test_convert_skills_to_sms_e2e.py  test_equip_persona_actor_wire.py  test_fill_provenance.py  test_generate_system_prompt_e2e.py  test_identity_entity_resolution.py  test_l3c_review.py  test_manifold.py  test_mark_compose_suggestion.py  test_p0_exhaust_ledgers.py  test_project_state_machine_branching_e2e.py  test_skill_to_sm_e2e.py  test_sm_branching_live_e2e.py  test_sm_core_e2e.py  test_sm_core_live_wiring.py  test_sm_factory_e2e.py  test_sm_factory_live_e2e.py  test_sm_gate_e2e.py  test_soma_fillers.py  test_strategy_loop_carton.py  test_swarm_fill.py
(+194 files in other folders)
